--- a/redis/tasks/main.yml
+++ b/redis/tasks/main.yml
@@ -1,22 +1,4 @@
-- name: Include Common Role for OS Prereqs
-  include_role:
-    name: common
-    tasks_from: os
-
-- name: Install {{COMPONENT}}
-  yum: 
-    name: 
-      - epel-release 
-      - yum-utils
-    state: present
-
-- name: Add {{COMPONENT}} repository
-  shell: |
-    yum install "{{REDIS_REPO}}" -y
-    yum-config-manager --enable remi
-    yum install redis -y
-
-- name: Update the BindIP in redif conf
+- name: Configuring redis.conf file
   replace:
     path: /etc/redis.conf
     regexp: '127.0.0.1'
