--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,28 +1,18 @@
-pipeline { //pipeline
+pipeline {
 
     agent any
     options { disableConcurrentBuilds() }
 
-    stages ('Setup Roboshop Application') { //stages
-        stage ('Installing redis Server') { //redis stage
-            steps { //redis steps
+    stages ('Setup Roboshop Application') { 
+        stage ('Installing redis Server') { 
+            steps { 
             withCredentials([aws(accessKeyVariable: 'AWS_ACCESS_KEY_ID', credentialsId: 'awskey', secretKeyVariable: 'AWS_SECRET_ACCESS_KEY')]) {
                     git 'https://github.com/imjitthu/tfas-redis.git'
-                    //sh 'terraform destroy -auto-approve'
                     sh 'terraform init'
                     sh 'terraform plan'
-                    //sh 'terraform apply -auto-approve'
-                    } //with credentials
+                    } 
             ansiblePlaybook credentialsId: 'DevOps321', installation: 'ansibletool', inventory: 'redis_inv', playbook: 'redis.yml'
-                } //redis steps
-            } //redis stage
-        } //stages
-    //         post { 
-    //     always { 
-    //         withCredentials([aws(accessKeyVariable: 'AWS_ACCESS_KEY_ID', credentialsId: 'awskey', secretKeyVariable: 'AWS_SECRET_ACCESS_KEY')]) {
-    //                 //sh 'terraform init'
-    //                 sh 'terraform destroy -auto-approve'
-    //                 } //with credentials
-    //     }
-    // }
-    } //pipeline
+                } 
+            } 
+        } 
+    } 
