--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,14 +3,26 @@ pipeline {
     agent any
     options { disableConcurrentBuilds() }
 
+    parameters {
+    choice(name: 'tfaction', choices: ['init', 'plan', 'apply -auto-approve', 'destroy -auto-approve'], description: 'Pick any action')
+    }
+
+    environment {
+        tfaction = "terraform ${params.tfaction}"
+                }
+
     stages ('Setup Roboshop Application') { 
         stage ('Installing redis Server') { 
             steps { 
             withCredentials([aws(accessKeyVariable: 'AWS_ACCESS_KEY_ID', credentialsId: 'awskey', secretKeyVariable: 'AWS_SECRET_ACCESS_KEY')]) {
-                    sh 'terraform init'
-                    sh 'terraform plan'
-                    } 
-            ansiblePlaybook credentialsId: 'DevOps321', installation: 'ansibletool', inventory: 'redis_inv', playbook: 'redis.yml'
+                sh "${env.tfaction}"
+                } 
+            if (params.tfaction == "apply -auto-approve") {
+                ansiblePlaybook credentialsId: 'DevOps321', installation: 'ansibletool', inventory: 'redis_inv', playbook: 'redis.yml'
+            }
+            else {
+                echo "terraform action is: ${env.tfaction}"
+                }
                 } 
             } 
         } 
