--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,28 +1,33 @@
-pipeline {
+pipeline { 
 
     agent any
     options { disableConcurrentBuilds() }
 
     parameters {
     choice(name: 'tfaction', choices: ['init', 'plan', 'apply -auto-approve', 'destroy -auto-approve'], description: 'Pick any action')
-    }
+               }
 
     environment {
         tfaction = "terraform ${params.tfaction}"
+        invfile  = "redis_inv"
+        playbook = "redis.yml"
                 }
 
     stages ('Setup Roboshop Application') { 
-        stage ('Installing redis Server') { 
+        stage ('Installing shipping Server') { 
             steps { 
             withCredentials([aws(accessKeyVariable: 'AWS_ACCESS_KEY_ID', credentialsId: 'awskey', secretKeyVariable: 'AWS_SECRET_ACCESS_KEY')]) {
-                sh "${env.tfaction}"
-                } 
-            if (params.tfaction == "apply -auto-approve") {
-                ansiblePlaybook credentialsId: 'DevOps321', installation: 'ansibletool', inventory: 'redis_inv', playbook: 'redis.yml'
-            }
-            else {
-                echo "terraform action is: ${env.tfaction}"
+                    sh "${env.tfaction}"
+                    }
+            script {
+                if (params.tfaction == "apply -auto-approve") {
+                    ansiblePlaybook credentialsId: 'DevOps321', installation: 'ansibletool', inventory: "${env.invfile}", playbook: "${env.invfile}"
+
                 }
+                else {
+                    echo "terraform action is: ${env.tfaction}"
+                    }
+                    } 
                 } 
             } 
         } 
